<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dep"
            android:icon="@drawable/depressionicon"
            android:title="@string/dep"
                                                />
        <item
            android:id="@+id/anx"
            android:icon="@drawable/anxietyicon"
            android:title="@string/anx" />
        <item
            android:id="@+id/rel"
            android:icon="@drawable/relaxicon"
            android:title="@string/rel" />
        <item
            android:id="@+id/set"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/set" />
    </group>

    <item android:title="For your own security">
        <menu>
            <item
                android:id="@+id/sout"
                android:icon="@drawable/outsign"
                android:title="@string/sout" />
        </menu>
    </item>

</menu>
